# Sqlize-Crystal-Reports

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc  crystal_parser.py  get_report_data.py  get_report_files.py  get_sql.py  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  renovate.json  settings.py  settings.text.py  sqlize.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  confg.yml  feature_request.md
.github/workflows/: codeql-analysis.yml  codespell.yml  lint.yml  release.yml  test.yml  update.yaml
RptToXml/: NHSN_Procedures.rpt  OpenMcdf.xml  VsWebSite.Interop.xml  log4net.xml
scripts/: crystal_parser.py  sqlize.py
