[tool.poetry]
name = "Sqlize Crystal Reports"
version = "1.3.0-alpha.1"
description = "Enthusiastic attempt at converting Crystal reports to SQL"
authors = ["Christopher Pickering"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8.0"
lxml = "^4.9.1"
sqlparse = "^0.4.1"
pyodbc = "^4.0.30"
requests = "^2.27.1"
xmltodict = "^0.13.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.289"
pre-commit = "^3.0.0"
tox = "^4.0.0"
isort = "^5.10.1"
black = "^23.0.0"

[tool.black]
max_line_length = 99
exclude = '''
    /(
        \.git
      | \.tox
      | \.venv
      | node_modules

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data
    )/
    '''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["E", "F", "B", 'A', 'Q', "ARG", "ERA","PL","RUF"]
ignore = ["E501",'PLR0912']
