[tool.poetry]
name = "Sqlize Crystal Reports"
version = "1.3.4"
description = "Enthusiastic attempt at converting Crystal reports to SQL"
authors = ["Christopher Pickering"]
license = "GPL-3.0-or-later"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.0"
lxml = "^5.0.0"
sqlparse = "^0.5.0"
pyodbc = "^5.0.0"
requests = "^2.27.1"
xmltodict = "^0.13.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"
pre-commit = "^3.0.0"
tox = "^4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "B", "A", "Q", "ARG", "ERA", "PL", "RUF", "I"]
ignore = ["E501", "PLR0912", "PLW1510"]

[tool.ruff.format]
quote-style = "double"
